--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,17 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <!-- Google Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Oswald|Permanent+Marker&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Fontawesome -->
+    <script
+      src="https://kit.fontawesome.com/2527bec7cc.js"
+      crossorigin="anonymous"
+    ></script>
+    <title>Store_ECommerce App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
